# vault-cli

./: .gitignore  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cli/: cli.rs  run.rs
cli/src/helper/: helper.rs
config/: Cargo.toml
config/src/: error.rs  lib.rs  request.rs  response.rs
deamon/: Cargo.toml
deamon/src/: confiig.rs  helper.rs  main.rs
deamon/src/cli/: cli.rs
deamon/src/handler/: handler.rs  mod.rs
deamon/src/worker/: worker.rs
