[package]
name = "config"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service"
] }
chrono = { version = "0.4.45", features = ["serde"] }
