[package]
name = "deamon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
rpassword = "7.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service"
] }
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
config = { path = "../config" }


